--- a/index.html
+++ b/index.html
@@ -16,29 +16,11 @@
         <label class="logo">loopstudio</label>
         <ul class="links">
           <div id="mobilemenu">
-            <li><a href="#" <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles.css" >
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
-  <title>Loopstudios landing page</title>
-</head>
-<body>
-    <header>
-      <nav>
-        <label class="logo">loopstudio</label>
-        <ul class="links">
-          <div id="mobilemenu">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="#" onclick="retriveBack()">About</a></li>
+            <li><a href="#" onclick="retriveBack()">Careers</a></li>
+            <li><a href="#" onclick="retriveBack()">Events</a></li>
+            <li><a href="#" onclick="retriveBack()">Products</a></li>
+            <li><a href="#" onclick="retriveBack()">Support</a></li>
           </div>
         </ul>
 
