--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 </head>
 <body>
     <header>
-      <nav>
-        <label class="logo">loopstudio</label>
+      <label class="logo">loopstudio</label>
+      <nav>  
         <ul class="links">
           <div id="mobilemenu">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="#" onclick="retriveBack()">About</a></li>
+            <li><a href="#" onclick="retriveBack()">Careers</a></li>
+            <li><a href="#" onclick="retriveBack()">Events</a></li>
+            <li><a href="#" onclick="retriveBack()">Products</a></li>
+            <li><a href="#" onclick="retriveBack()">Support</a></li>
           </div>
         </ul>
-
         <a id="icon" onclick="myFun()">
           <i class="fa fa-bars"></i>
         </a>
@@ -32,6 +31,8 @@
         Immersive experiences that deliver
       </div>
     </header>
+
+
     <div id="trans">
       <article>
         <div><img src="./images/desktop/image-interactive.jpg" alt="" ></div>
@@ -42,7 +43,8 @@
             bussiness through digital experiences that bind to their brand.
           </p>
         </div>
-    </article>
+      </article>
+
     <section>
       <div class="section-header">
         <h1>OUR CREATIONS</h1>
