--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <label class="logo">loopstudio</label>
         <ul class="links">
           <div id="mobilemenu">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="#" onclick="retrieve()">About</a></li>
+            <li><a href="#"  onclick="retrieve()">Careers</a></li>
+            <li><a href="#"  onclick="retrieve()">Events</a></li>
+            <li><a href="#" onclick="retrieve()">Products</a></li>
+            <li><a href="#"  onclick="retrieve()">Support</a></li>
           </div>
         </ul>
 
